# consistent-hashing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: measure_load.py  measure_reassignment.py
src/consistent_hashing/: __init__.py  _hash.py  naive.py  ring.py  virtual_nodes.py
tests/: test_naive.py  test_ring.py  test_virtual_nodes.py
