[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consistent-hashing"
version = "0.1.0"
description = "Three consistent-hashing implementations compared — naive, ring, and virtual nodes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.4",
]
viz = ["matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/consistent_hashing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["consistent_hashing"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
